--- a/eclassroom/eclassroom.vcxproj.filters
+++ b/eclassroom/eclassroom.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="UpdateAssignment.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SubmitList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LoginForm.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="UpdateAssignment.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SubmitList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
